--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="com.example.purramid.purramidtime">
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <application
+        android:name=".PurramidTime"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -11,17 +22,123 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PurramidTime">
+
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.PurramidTime">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <!-- CLOCK -->
+        <activity android:name=".clock.ClockActivity"
+            android:exported="false"
+            android:label="@string/clock_title"
+            android:parentActivityName=".MainActivity"
+            android:resizeableActivity="true"
+            android:windowLayoutInDisplayCutoutMode="shortEdges">
+            <layout android:defaultWidth="420dp"
+                android:defaultHeight="300dp"
+                android:gravity="center" />
+        </activity>
+
+        <service android:name=".clock.ClockOverlayService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="dataSync">
+            <intent-filter>
+                <action android:name="com.example.thepurramid.ClockOverlayService" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".clock.ui.TimeZoneGlobeActivity"
+            android:exported="false"
+            android:label="@string/set_time_zone"
+            android:parentActivityName=".clock.ClockActivity"
+            android:resizeableActivity="true"
+            android:windowLayoutInDisplayCutoutMode="shortEdges">
+            <layout android:defaultWidth="1000dp"
+                android:defaultHeight="750dp"
+                android:gravity="center" />
+        </activity>
+
+        <!-- STOPWATCH -->
+        <activity android:name=".stopwatch.StopwatchActivity"
+            android:exported="false"
+            android:label="@string/stopwatch_title"
+            android:parentActivityName=".MainActivity"
+            android:resizeableActivity="true"
+            android:windowLayoutInDisplayCutoutMode="shortEdges">
+            <layout android:defaultWidth="420dp"
+                android:defaultHeight="300dp"
+                android:gravity="center" />
+        </activity>
+
+        <service android:name=".stopwatch.StopwatchService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
+
+        <!-- TIMER -->
+        <activity android:name=".timer.TimerActivity"
+            android:exported="false"
+            android:label="@string/timers_title"
+            android:parentActivityName=".MainActivity"
+            android:resizeableActivity="true"
+            android:windowLayoutInDisplayCutoutMode="shortEdges">
+            <layout android:defaultWidth="420dp"
+                android:defaultHeight="300dp"
+                android:gravity="center" />
+        </activity>
+
+        <service android:name=".timer.TimerService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
+
+        <!-- ABOUT -->
+        <activity android:name=".AboutActivity"
+            android:exported="false"
+            android:label="@string/about"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.Dialog"
+            android:resizeableActivity="true"
+            android:windowLayoutInDisplayCutoutMode="shortEdges">
+            <layout android:defaultWidth="600dp"
+                android:defaultHeight="500dp"
+                android:gravity="center" />
+        </activity>
+
+        <!-- WIDGET -->
+        <receiver android:name=".PurramidWidgetProvider"
+            android:exported="false"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/purramid_widget_info" />
+        </receiver>
+        <activity
+            android:name=".WidgetConfigActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Dialog">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+            </intent-filter>
+        </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+    </application>
 </manifest>
