--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,18 @@
 [versions]
-activityCompose = "1.10.1"
-activityktx = "1.9.2"
 agp = "8.12.0"
 androidsvg = "1.4"
 androidxNavigation = "2.8.9"
 androidxWindow = "1.3.0"
-animationCoreAndroid = "1.8.3"
 appcompat = "1.7.0"
 arCore = "1.48.0"
 cardview = "1.0.0"
 colorpicker = "2.3"
-composeBom = "2024.09.00"
 constraintlayout = "2.2.1"
 coreKtx = "1.16.0"
 coroutines = "1.10.2"
 espressoCore = "3.6.1"
+filament = "1.45.0"
+flexbox = "3.0.0"
 gson = "2.13.0"
 hilt = "2.56.2"
 jts = "1.20.0"
@@ -24,57 +22,67 @@ kotlin = "2.1.20"
 kotlinxSerializationJson = "1.8.1"
 ksp = "2.1.20-2.0.0"
 lifecycle = "2.8.7"
-lifecycleRuntimeKtx = "2.9.1"
 material = "1.12.0"
-mpAndroidChart = "3.1.0"
-navigation = "1.2.0"
-safeArgsPlugin = "[versions.androidxNavigation]"
+recyclerview = "1.3.2"
 room = "2.7.0"
 sceneView = "2.3.0"
 
 [libraries]
-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityktx" }
+# Android Core
 androidsvg = { group = "com.caverock", name = "androidsvg", version.ref = "androidsvg" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-lifecycle-service = { group = "androidx.lifecycle", name = "lifecycle-service", version.ref = "lifecycle" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "androidxNavigation" }
-androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "androidxNavigation" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+androidx-window = { group = "androidx.window", name = "window", version.ref = "androidxWindow" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
+androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+
+# UI Components
 cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
 colorpicker = { group = "com.github.dhaval2404", name = "colorpicker", version.ref = "colorpicker" }
-google-ar-core = { module = "com.google.ar:core", version.ref = "arCore" }
-google-material = { module = "com.google.android.material:material", version.ref = "material" }
-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
+constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
+flexbox = { group = "com.google.android.flexbox", name = "flexbox", version.ref = "flexbox" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+
+# Lifecycle
+androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-service = { group = "androidx.lifecycle", name = "lifecycle-service", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+
+# Navigation
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "androidxNavigation" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "androidxNavigation" }
+
+# Coroutines
+coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
+
+# Dependency Injection
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt" }
-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "navigation"}
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+
+# Database
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+
+# AR & 3D
+filament-android = { group = "com.google.android.filament", name = "filament-android", version.ref = "filament" }
+gltfio-android = { group = "com.google.android.filament", name = "gltfio-android", version.ref = "filament" }
+google-ar-core = { module = "com.google.ar:core", version.ref = "arCore" }
 sceneview = { module = "io.github.sceneview:sceneview", version.ref = "sceneView" }
-androidx-animation-core-android = { group = "androidx.compose.animation", name = "animation-core-android", version.ref = "animationCoreAndroid" }
+
+# Utilities
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
+jts-core = { group = "org.locationtech.jts", name = "jts-core", version.ref = "jts" }
+jts-io-common = { group = "org.locationtech.jts.io", name = "jts-io-common", version.ref = "jts" }
+
+# Testing
+androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+junit = { group = "junit", name = "junit", version.ref = "junit" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
-androidx-navigation-safeargs-kotlin = { id = "androidx.navigation.safeargs.kotlin", version.ref = "androidxNavigation" }
-hilt-gradle = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-ksp = {id = "com.google.devtools.ksp", version.ref = "ksp"}
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
