--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
-        android:name=".PurramidTime"
+        android:name=".PurramidTimeApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -49,7 +49,7 @@
             android:exported="false"
             android:foregroundServiceType="dataSync">
             <intent-filter>
-                <action android:name="com.example.thepurramid.ClockOverlayService" />
+                <action android:name="com.example.purramid.purramidtime.ClockOverlayService" />
             </intent-filter>
         </service>
 
@@ -84,7 +84,7 @@
         <!-- TIMER -->
         <activity android:name=".timer.TimerActivity"
             android:exported="false"
-            android:label="@string/timers_title"
+            android:label="@string/timer_title"
             android:parentActivityName=".MainActivity"
             android:resizeableActivity="true"
             android:windowLayoutInDisplayCutoutMode="shortEdges">
